Remove border left class as collapse table borders fixes this

--- a/RecipePageMain/style.css
+++ b/RecipePageMain/style.css
@@ -97,10 +97,6 @@ span {
 	font-weight: 800;
 }
 
-.remove_left_border {
-	border-left: none;
-}
-
 /* BLOCKS */
 
 .wrapper {
